# warlock

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  test-live.yml  test.yml
docs/: api.md  architecture.md  gateway.md
docs/decisions/: 001-writable-rootfs-strategy.md  002-test-strategy.md  003-ssh-console-access.md
scripts/: install-firecracker.sh  install.sh  setup-droplet.sh
src/: app.rs  capacity.rs  error.rs  firecracker.rs  gateway_client.rs  lib.rs  logging.rs  main.rs
src/firecracker/: mod.rs  network.rs  orphan.rs  preflight.rs  version.rs
src/handlers/: healthcheck.rs  mod.rs  vm.rs
src/ssh/: auth.rs  authorized_keys.rs  host_key.rs  mod.rs  server.rs  session.rs
src/vm/: config.rs  mod.rs  network.rs  rootfs.rs
tests/: healthcheck.rs  vm.rs  vm_lifecycle.rs
tests/common/: mod.rs
