[package]
name = "warlock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["catch-panic"] }

[dev-dependencies]
once_cell = "1.20"

[[test]]
name = "healthcheck"
path = "tests/healthcheck.rs"
