[package]
name = "warlock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1"
axum = "0.8.8"
firecracker-rs-sdk = { git = "https://github.com/TristanBlackwell/firecracker-rs-sdk.git", rev = "9270cff", features = ["_rt-tokio"] }
reqwest = { version = "0.13.2", features = ["json"] }
russh = "0.45"
russh-keys = "0.45"
semver = "1.0"
ssh-key = { version = "0.6", features = ["std", "ed25519"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.32"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
which = "7"

[dev-dependencies]
http-body-util = "0.1"
once_cell = "1.20"
tempfile = "3.8"
